--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Linking the css file, I can use it later no css file for now :)) -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Navbar -->
@@ -21,10 +21,7 @@
         </nav>
     </header>
 
-    <!-- Home Section -->
-
-     <!-- I make classes bcs there is a lot of section, so i can target them during styling on css file -->
-      
+    <!-- Home Section -->      
     <section class="home">
         <h1>Welcome to My Portfolio</h1>
         <p>Discover my work and projects.</p>
